about slideshow complete

--- a/views/about.haml
+++ b/views/about.haml
@@ -14,17 +14,46 @@
       %img.btn(src="/images/navigation/blog.jpg" alt="blog")/
 .about
   .slideshow
-    %img(src="/images/about/profile_pic_1.jpg" alt="me")/
+    #slides 
+      .slides_container
+        %div 
+          %img(src="/images/about/slide1.jpg" alt="slide1")/
+        %div
+          %img(src="/images/about/slide2.jpg" alt="slide2")
+        %div
+          %img(src="/images/about/slide3.jpg" alt="slide3")          
+        %div
+          %img(src="/images/about/slide4.jpg" alt="slide4")/
+        %div
+          %img(src="/images/about/slide5.jpg" alt="slide5")
+        %div
+          %img(src="/images/about/slide6.jpg" alt="slide6")
+        %div
+          %img(src="/images/about/slide7.jpg" alt="slide7")
+        %div
+          %img(src="/images/about/slide8.jpg" alt="slide8")
+        %div
+          %img(src="/images/about/slide9.jpg" alt="slide9")
+        %div
+          %img(src="/images/about/slide10.jpg" alt="slide10")
+        %div
+          %img(src="/images/about/slide11.jpg" alt="slide11")
+        %div
+          %img(src="/images/about/slide12.jpg" alt="slide12")
+        %div
+          %img(src="/images/about/slide13.jpg" alt="slide13")
+        %div
+          %img(src="/images/about/slide14.jpg" alt="slide14")
   
   .casual-intro
     %p
-      Hello and thank you for visiting my website!! I am a graphic designer and web developer based in San Francisco, California. As a frontend developer, I specialize in the user interface experience and often take on projects from the design phase to frontend and to a lesser extent backend development. I have been developing web applications for several years now, mostly on the Rails framework, and have much experience collaborating with designers, backend developers and software engineers.
+      Hello and thank you for visiting my website!! I am a graphic designer and web developer based in San Francisco, California. As a frontend developer, I specialize in the user interface experience and often take on projects from the design phase to frontend development. I have been developing web applications for several years now, mostly on the Rails framework, and have much experience collaborating with designers, backend developers and software engineers.
     %p
-      Outside of the professional realm, I'm an introverted yet strongly opinionated nerd. I have an elegant, graceful black cat and a loud, silly french bulldog, both incredibly adorable. I love interior design, furniture design, classical music, and old French films. Please feel free to glance at my portfolio and do not hesitate to 
+      Outside of the professional realm, I'm an introverted yet strongly opinionated nerd. I have an elegant, graceful black cat and a loud, silly french bulldog, both incredibly adorable. I love interior design, furniture design, classical music, and cooking. Please feel free to glance at my portfolio and do not hesitate to 
       %a(href="mailto:ana.enders@gmail.com")contact me
       with any feedback or questions.
     %p
-      Thank You!!
+      Thanks!!
       
   .twitter-feed
 
@@ -36,7 +65,7 @@
   .resume
     %h1 Freelance Web Designer and Front End Developer
     %description 
-      I am a website designer and developer interested in user interfaces and website implementation. My experience ranges from the design phase to frontend engineering. I have formal training in design and am well versed in graphic tools such as Photoshop and Illustrator. Most of the sites I’ve worked on live on the Rails framework, in which I write web compliant views in HTML, HAML, CSS, SASS, JavaScript, and basic Ruby. My personal interest in programming languages has led me into the world of Java, Ruby, Python, and PHP/MySQL, learning the basics of Object Oriented Programming, which has made it possible for me to tinker with frontend code written by other developers. I have also become a site-wide QA expert on various platforms and operating systems. In other words, I am a pixel perfect attention to detail kind of gal.
+      I am a website designer and developer interested in user interfaces and website implementation. My experience ranges from the design phase to frontend engineering. I have formal training in design and am well versed in graphic tools such as Photoshop and Illustrator. Most of the sites I’ve worked on live on the Rails framework, in which I write web compliant views in HTML, HAML, CSS, SASS, basic JavaScript (through JQuery) and basic Ruby. My personal interest in programming languages has led me into the world of Java, Ruby, Python, and PHP/MySQL, learning the basics of Object Oriented Programming, which has made it possible for me to tinker with frontend code written by other developers. I have also become a site-wide QA expert on various platforms and operating systems. In other words, I am a pixel perfect attention to detail kind of gal.
     .follow
       %a(href="https://twitter.com/#!/anaecarter" class="twitter-follow-button" data-show-count="false" data-lang="en")Follow @anaecarter
     %a.dload(href="/resume")
@@ -68,7 +97,7 @@
           %tr 
             %td Online Course for Professional Development
             %td Online Course for Professional Development
-            %td Completed one year of two year program
+            %td Completed one year of a two year program
     .category
       %span skills
       .clear
@@ -158,7 +187,7 @@
                 %a(href="/")
                   Self Employed
             %td.date 
-              New York
+              New York, NY
               .job
                 %a(href="http://intersectnyc.com" target="_blank")
                   Intersect NYC
@@ -202,8 +231,8 @@
           %tr 
             %td Freelancing for old clients in need of frontend adjustments to their existing sites.
             %td As a member of the development team, I worked closely with the designers, backend programmers, and software engineers in producing custom sites and content management software.
-            %td In addition to being a photo shoot and set design assistant, I worked on image post-production and editing, logo, graphic and web design and web development using Photoshop and Flash.
-            %td Designed and developed a housing site using HTML, CSS, Javascript, PHP, and MySql. Created design templates and programmed both client and server side.
+            %td In addition to being a photo shoot and set design assistant, I worked on image post-production editing, logo design, graphic design, web design and web development using Photoshop, HTML, CSS and Flash.
+            %td Designed and developed a housing site using HTML, CSS, Javascript, PHP, and MySql. Created design templates and programmed both client and server sides.
             %td Responsible for managing content and editing product images through Photoshop for the company website. Office tasks included proofreading and editing written content for web and printed brochure. Assisted in the production of custom wood furniture making.
     .category
       %span additional information
