--- a/views/index.haml
+++ b/views/index.haml
@@ -636,7 +636,7 @@
           Collaborated with 
           %a(href="http://creativelabny.com/" target="_blank")
             CreativeLab 
-          in re-skinning this site using xml, flash, and html. 
+          in re-skinning this site using XML, Flash, and HTML. 
           URL:
           %a(href="http://getmax.com/" target="_blank")
             http://getmax.com
@@ -648,7 +648,7 @@
       %img(src="/images/portfolio/print/bwcollage1.jpg" alt="bwcollage")/
       .project-description
         %span Composing with random objects, part 1.1
-        %p In a graduate school course called "Design Process; Visual Communication", we were given an assignment with the following parameters. We were to create three different compositions in black and white with objects randomly picked out from a bag. We were allowed to use a Xerox machine to create copies and we were allowed to alter the size of these objects. Each object was allowed to appear several times in the same composition. I picked a screw, an apple and a crayon tip. This is the first of three from the black and white series.   
+        %p In a graduate school course called "Design Process; Visual Communication", we were given an assignment with the following parameters: we were to create three different compositions in black and white with objects randomly picked out from a bag. We were allowed to use a Xerox machine to create copies and we were allowed to alter the size of these objects. Each object was allowed to appear several times in the same composition. I picked a screw, an apple and a crayon tip. This is the first of three from the black and white series.   
   
 #bwcollage2    
   .detail-container
