--- a/views/layout.haml
+++ b/views/layout.haml
@@ -16,6 +16,7 @@
     %script(src="/javascripts/sugar-1.2.4.min.js" type="text/javascript")
     %script(src="/javascripts/application.js" type="text/javascript")
     %script(src="/javascripts/dialog.js" type="text/javascript")
+    %script(src="/javascripts/slides.min.jquery.js" type="text/javascript")
     
   %body
     .content
