--- a/views/stylesheets/app.scss
+++ b/views/stylesheets/app.scss
@@ -418,7 +418,7 @@ p {
         letter-spacing: 5px; 
         padding: 5px 10px;
         font-size: 11px;
-        -webkit-box-reflect: below 0px -webkit-gradient( linear, left top, left bottom, color-stop(0.0, rgba(255, 255, 255, 0.0)), color-stop(0.9, rgba(255,255,255,0.3)), color-stop(1.0, rgba(255, 255, 255, 0.7)));
+        // -webkit-box-reflect: below 0px -webkit-gradient( linear, left top, left bottom, color-stop(0.0, rgba(255, 255, 255, 0.0)), color-stop(0.9, rgba(255,255,255,0.3)), color-stop(1.0, rgba(255, 255, 255, 0.7)));
       }
       .skill-list {
         width: 100px;
