fixed weird text characters that were not displaying properly

--- a/views/about.haml
+++ b/views/about.haml
@@ -49,7 +49,7 @@
     %p
       Hello and thank you for visiting my website!! I am a graphic designer and web developer based in San Francisco, California. As a frontend developer, I specialize in the user interface experience and often take on projects from the design phase to frontend development. I have been developing web applications for several years now, mostly on the Rails framework, and have much experience collaborating with designers, backend developers and software engineers.
     %p
-      Outside of the professional realm, I'm an introverted yet strongly opinionated nerd. I have an elegant, graceful black cat and a loud, silly french bulldog, both incredibly adorable. I love interior design, furniture design, classical music, and cooking. Please feel free to glance at my portfolio and do not hesitate to 
+      Outside of the professional realm, I&rsquo;m an introverted yet strongly opinionated nerd. I have an elegant, graceful black cat and a loud, silly french bulldog, both incredibly adorable. I love interior design, furniture design, classical music, and cooking. Please feel free to glance at my portfolio and do not hesitate to 
       %a(href="mailto:ana.enders@gmail.com")contact me
       with any feedback or questions.
     %p
@@ -65,7 +65,7 @@
   .resume
     %h1 Freelance Web Designer and Front End Developer
     %description 
-      I am a website designer and developer interested in user interfaces and website implementation. My experience ranges from the design phase to frontend engineering. I have formal training in design and am well versed in graphic tools such as Photoshop and Illustrator. Most of the sites I’ve worked on live on the Rails framework, in which I write web compliant views in HTML, HAML, CSS, SASS, basic JavaScript (through JQuery) and basic Ruby. My personal interest in programming languages has led me into the world of Java, Ruby, Python, and PHP/MySQL, learning the basics of Object Oriented Programming, which has made it possible for me to tinker with frontend code written by other developers. I have also become a site-wide QA expert on various platforms and operating systems. In other words, I am a pixel perfect attention to detail kind of gal.
+      I am a website designer and developer interested in user interfaces and website implementation. My experience ranges from the design phase to frontend engineering. I have formal training in design and am well versed in graphic tools such as Photoshop and Illustrator. Most of the sites I&#39;ve worked on live on the Rails framework, in which I write web compliant views in HTML, HAML, CSS, SASS, basic JavaScript (through JQuery) and basic Ruby. My personal interest in programming languages has led me into the world of Java, Ruby, Python, and PHP/MySQL, learning the basics of Object Oriented Programming, which has made it possible for me to tinker with frontend code written by other developers. I have also become a site&#45;wide QA expert on various platforms and operating systems. In other words, I am a pixel perfect attention to detail kind of gal.
     .follow
       %a(href="https://twitter.com/#!/anaecarter" class="twitter-follow-button" data-show-count="false" data-lang="en")Follow @anaecarter
     %a.dload(href="/resume")
@@ -79,13 +79,13 @@
             %th University of Waterloo
             %th Parsons School of Design
             %th Carnegie Mellon University
-            %th Centre International D’Etudes Français
+            %th Centre International D&#39;Etudes Fran&#231;ais
           
           %tr
             %td.date May 2011
             %td.date March 2011
-            %td.date 2007 – 2008
-            %td.date 2001 – 2005
+            %td.date 2007 &#45; 2008
+            %td.date 2001 &#45; 2005
             %td.date Summer 2004
           
           %tr
@@ -125,7 +125,7 @@
                 %label Javascript
               %td 
                 .advanced.alt
-                %label JQuery & JQuery-UI
+                %label JQuery &#38; JQuery-UI
               %td 
                 .expert
                 %label SASS  
@@ -209,23 +209,23 @@
           
           %tr
             %td 
-              September 2011 – Present 
+              September 2011 &#45; Present 
               %br/
               (7 months)
             %td 
-              September 2008 – September 2011 
+              September 2008 &#45; September 2011 
               %br/
               (3 years 1 month)
             %td 
-              June 2008 – September 2008 
+              June 2008 &#45; September 2008 
               %br/
               (4 months)	
             %td 
-              August 2008 – August 2008 
+              August 2008 &#45; August 2008 
               %br/
               (1 month)	
             %td 
-              February 2006 – February 2007 
+              February 2006 &#45; February 2007 
               %br/
               (1 year 1 month)	
           %tr 
