--- a/views/about.haml
+++ b/views/about.haml
@@ -63,7 +63,7 @@
       %span <%= time %> from <%= from %>
 
   .resume
-    %h1 Freelance Web Designer and Front End Developer
+    %h1 Web Designer and Frontend Developer
     %description 
       I am a website designer and developer interested in user interfaces and website implementation. My experience ranges from the design phase to frontend engineering. I have formal training in design and am well versed in graphic tools such as Photoshop and Illustrator. Most of the sites I&#39;ve worked on live on the Rails framework, in which I write web compliant views in HTML, HAML, CSS, SASS, basic JavaScript (through JQuery) and basic Ruby. My personal interest in programming languages has led me into the world of Java, Ruby, Python, and PHP/MySQL, learning the basics of Object Oriented Programming, which has made it possible for me to tinker with frontend code written by other developers. I have also become a site&#45;wide QA expert on various platforms and operating systems. In other words, I am a pixel perfect attention to detail kind of gal.
     .follow
