--- a/views/layout.haml
+++ b/views/layout.haml
@@ -17,6 +17,9 @@
     %script(src="/javascripts/application.js" type="text/javascript")
     %script(src="/javascripts/dialog.js" type="text/javascript")
     %script(src="/javascripts/slides.min.jquery.js" type="text/javascript")
+    / [if lt IE 9]
+      %script(src="/javascripts/html5shiv.js" type="text/javascript")
+
     
   %body
     .content
