--- a/views/stylesheets/app.scss
+++ b/views/stylesheets/app.scss
@@ -405,7 +405,7 @@ img { border: 0px }
       display: block;
       font-weight: normal;
       font-size: 13px;
-      line-height: 1.4em;
+      p { display: block; width: 636px; margin: 10px auto }
     }
     .category {
       border-top: 1px dotted $grey;
