IE7 edits, continued

--- a/views/stylesheets/app.scss
+++ b/views/stylesheets/app.scss
@@ -153,6 +153,7 @@ img { border: 0px }
   width: 1283px;
   margin: 0px auto;
   padding: 0px;
+  position: relative;
   header {
     @extend .generic; 
     z-index: 600;
@@ -272,6 +273,7 @@ img { border: 0px }
       p { 
         font-size: 12px; 
         clear: both; 
+        display: block;
         margin: 10px 0 0 0; 
         float: left; 
         padding: 0px;
