--- a/views/layout.haml
+++ b/views/layout.haml
@@ -19,7 +19,7 @@
     %script(src="/javascripts/slides.min.jquery.js" type="text/javascript")
     / [if lt IE 9]
       %script(src="/javascripts/html5shiv.js" type="text/javascript")
-      %script(src="/javascripts/html5.js" type="text/javascript")
+      / %script(src="/javascripts/html5.js" type="text/javascript")
 
 
     
