resume upload and other minor styling edits

--- a/views/about.haml
+++ b/views/about.haml
@@ -177,11 +177,11 @@
             %th 
               Frontend Engineer
             %th 
-              Intern Designer
+              Design Intern
             %th 
               Freelance Web Designer and Developer
             %th 
-              Junior Woodworker
+              Junior Woodworker and Website Manager
       
           %tr
             %td.date 
@@ -235,7 +235,7 @@
             %td Freelancing for old clients in need of frontend adjustments to their existing sites.
             %td As a member of the development team, I worked closely with the designers, backend programmers, and software engineers in producing custom sites and content management software.
             %td In addition to being a photo shoot and set design assistant, I worked on image post-production editing, logo design, graphic design, web design and web development using Photoshop, HTML, CSS and Flash.
-            %td Designed and developed a housing site using HTML, CSS, Javascript, PHP, and MySql. Created design templates and programmed both client and server sides.
+            %td Designed and developed a housing site using HTML, CSS, Javascript, PHP and MySql. Created design templates and programmed both client and server sides.
             %td Responsible for managing content and editing product images through Photoshop for the company website. Office tasks included proofreading and editing written content for web and printed brochure. Assisted in the production of custom wood furniture making.
     .category
       %span additional information
