--- a/views/stylesheets/app.scss
+++ b/views/stylesheets/app.scss
@@ -405,6 +405,7 @@ img { border: 0px }
       width: 636px;
       display: block;
       font-weight: normal;
+      line-height: 1.4em;
       font-size: 13px;
     }
     .category {
