--- a/views/stylesheets/app.scss
+++ b/views/stylesheets/app.scss
@@ -107,8 +107,8 @@ $neon-green: #dcf74a;
       url('/fonts/Archer-Medium-Pro.otf'); /* IE9+ */
 }
 
-::selection { background-color:#b4fef1; }
-::-moz-selection { background-color:#b4fef1; }
+::selection { background-color:#fce7e7; }
+::-moz-selection { background-color:#fce7e7; }
 
 /***********************anaenders***********************/
 body {
