updated portfolio to include O's new site

--- a/views/index.haml
+++ b/views/index.haml
@@ -15,6 +15,10 @@
     .web-logo
       %img(src="/images/portfolio/web/web_logo.png" alt="web")/
   
+    .small-thumb#orsella_opener
+      %a(href="#")
+        %img(src="/images/portfolio/web/orsella.png" alt="orsella's site")/
+          
     .small-thumb#wedding_site_opener
       %img(src="/images/portfolio/web/ana_ian.png" alt="ana and ian")/
   
@@ -85,10 +89,6 @@
     .small-thumb#lucky_stylespotter_opener
       %a(href="#")
         %img(src="/images/portfolio/web/lss.png" alt="lucky style spotter")/
-  
-    .small-thumb#orsella_opener
-      %a(href="#")
-        %img(src="/images/portfolio/web/orsella.png" alt="orsella's site")/
     
     .small-thumb#bond_and_bowery_opener
       %a(href="#")
@@ -177,6 +177,21 @@
 .clear
 
 / START LARGE PROJECT DESCRIPTIONS
+
+#orsella    
+  .detail-container
+    .inner-container   
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/web/orsella.jpg" alt="Orsella")/
+      .project-description
+        %span Orsella
+        %p 
+          This is a super simple site for my long time friend. It's a snazzy, modern site with a fullscreen slideshow rotating through some of her favorite images. The social networking icons link visitors to her online worlds, such as Facebook, Twitter, etc. I designed and wrote the UI in HTML5, CSS3, and plugged in a JavaScript Slideshow. Server configuration and deployment were handled by
+          %a(href="http://ianenders.com/" target="_blank")
+            Ian.
+          URL:
+          %a(href="http://orsella.com/" target="_blank")
+            http://orsella.com
     
 #wedding_site     
   .detail-container
@@ -489,22 +504,6 @@
           URL:
           %a(href="http://stylespotter.luckymag.com/" target="_blank")
             http://stylespotter.luckymag.com
-  
-#orsella    
-  .detail-container
-    .inner-container   
-      %a.close#js-close-modal(href="#")
-      %img(src="/images/portfolio/web/orsella.jpg" alt="Orsella")/
-      .project-description
-        %span Orsella
-        %p 
-          This was a christmas gift for my long time friend. I was going for the stylish, sophisticated and professional look, since those are the words I would use to describe her. This was an exercise in designing and programming a Rails site from the ground up. Collaborated with  
-          %a(href="http://ianenders.com/" target="_blank")
-            Ian Enders 
-          for backend and ajax support.
-          URL:
-          %a(href="http://orsella.com/" target="_blank")
-            http://orsella.com
  
 #bond_and_bowery    
   .detail-container
