new web section in portfolio

--- a/views/index.haml
+++ b/views/index.haml
@@ -11,25 +11,15 @@
       %img.btn(src="/images/navigation/blog.jpg" alt="blog")/
 
 .portfolio
-  .web    
+  .web.professional   
     .web-logo
-      %img(src="/images/portfolio/web/web_logo.png" alt="web")/
-  
-    .small-thumb#orsella_opener
-      %a(href="#")
-        %img(src="/images/portfolio/web/orsella.png" alt="orsella's site")/
-          
-    .small-thumb#wedding_site_opener
-      %img(src="/images/portfolio/web/ana_ian.png" alt="ana and ian")/
+      %img(src="/images/portfolio/web/web_logo_professional.png" alt="web")/
   
     .small-thumb#scully_opener
       %img(src="/images/portfolio/web/scully.png" alt="scully and scully")/
   
     .small-thumb#mally_opener
       %img(src="/images/portfolio/web/mally.png" alt="mally beauty")/
-  
-    .small-thumb#kayandy_opener
-      %img(src="/images/portfolio/web/kayandy.png" alt="kayleigh and andy")/   
   
     .small-thumb#kico_opener
       %img(src="/images/portfolio/web/kicokids.png" alt="kico kids")/
@@ -125,10 +115,24 @@
     .small-thumb#cinemax_opener
       %a(href="#")
         %img(src="/images/portfolio/web/cinemax.png" alt="cinemax")/
+
+  .web.personal    
+    .web-logo
+      %img(src="/images/portfolio/web/web_logo_personal.png" alt="web")/
+      
+    .small-thumb#orsella_opener
+      %a(href="#")
+        %img(src="/images/portfolio/web/orsella.png" alt="orsella's site")/
+        
+    .small-thumb#wedding_site_opener
+      %img(src="/images/portfolio/web/ana_ian.png" alt="ana and ian")/
+      
+    .small-thumb#kayandy_opener
+      %img(src="/images/portfolio/web/kayandy.png" alt="kayleigh and andy")/
   
   .print
     .print-logo
-      %img(src="/images/portfolio/print/print_logo.png" alt="print")/
+      %img(src="/images/portfolio/print/print_logo_right.png" alt="print")/
   
     .small-thumb#bwcollage1_opener
       %img(src="/images/portfolio/print/bw1.jpg" alt="black and white")/
