--- a/views/about.haml
+++ b/views/about.haml
@@ -47,7 +47,7 @@
   
   .casual-intro
     %p
-      Hello and thank you for visiting my website!! I am a graphic designer and web developer based in San Francisco, California. As a frontend developer, I specialize in the user interface experience and often take on projects from the design phase to frontend development. I have been developing web applications for several years now, mostly on the Rails framework, and have much experience collaborating with designers, backend developers and software engineers.
+      Hello and thank you for visiting my website!! I am a graphic designer and web developer based in San Francisco, California. As a frontend developer, I specialize in the user interface experience and often take on projects from the design phase to frontend development. I have been developing web applications for several years now, mostly on the Rails framework, and have extensive experience collaborating with designers, backend developers and software engineers.
     %p
       Outside of the professional realm, I&rsquo;m an introverted yet strongly opinionated nerd. I have an elegant, graceful black cat and a loud, silly french bulldog, both incredibly adorable. I love interior design, furniture design, classical music, and cooking. Please feel free to glance at my portfolio and do not hesitate to 
       %a(href="mailto:ana.enders@gmail.com")contact me
@@ -66,7 +66,7 @@
     %h1 Web Designer and Frontend Developer
     .clear
     %summary 
-      I am a website designer and developer interested in user interfaces and website implementation. My experience ranges from the design phase to frontend engineering. I have formal training in design and am well versed in graphic tools such as Photoshop and Illustrator. Most of the sites I&#39;ve worked on live on the Rails framework, in which I write web compliant views in HTML, HAML, CSS, SASS, basic JavaScript (through JQuery) and basic Ruby. My personal interest in programming languages has led me into the world of Java, Ruby, Python, and PHP/MySQL, learning the basics of Object Oriented Programming, which has made it possible for me to tinker with frontend code written by other developers. I have also become a site&#45;wide QA expert on various platforms and operating systems. In other words, I am a pixel perfect attention to detail kind of gal.
+      I am a website designer and developer interested in user interfaces and website implementation. My experience ranges from the design phase to frontend engineering. I have formal training in design and am well versed in graphic tools such as Photoshop and Illustrator. The majority of the sites I&#39;ve worked on are Rails projects, in which I write web compliant views in HTML, HAML, CSS, SASS, basic JavaScript (through JQuery) and basic Ruby. My personal interest in programming languages has led me into the world of Java, Ruby, Python, and PHP/MySQL, learning the basics of Object Oriented Programming, which has made it possible for me to tinker with frontend code written by other developers. I have also become a site&#45;wide QA expert on various platforms and operating systems. In other words, I am a pixel-perfect, attention to detail kind of gal.
     .follow
       %a(href="https://twitter.com/#!/anaecarter" class="twitter-follow-button" data-show-count="false" data-lang="en")Follow @anaecarter
     %a.dload(href="/ana_enders.pdf" target="_blank")
