--- a/views/about.haml
+++ b/views/about.haml
@@ -257,7 +257,7 @@
           %td
             %a.facebook{:target => 'blank'}(href="https://www.facebook.com/anamonster")
           %td
-            %a.twitter{:target => 'blank'}(href="https://twitter.com/#!/anaecarter")
+            %a.twitter{:target => 'blank'}(href="https://twitter.com/#!/anaenders")
           %td
             %a.github{:target => 'blank'}(href="https://github.com/anacarter")
             
