updated more twitter info

--- a/views/about.haml
+++ b/views/about.haml
@@ -68,7 +68,7 @@
     %summary 
       I am a website designer and developer interested in user interfaces and website implementation. My experience ranges from the design phase to frontend engineering. I have formal training in design and am well versed in graphic tools such as Photoshop and Illustrator. The majority of the sites I&#39;ve worked on are Rails projects, in which I write web compliant views in HTML, HAML, CSS, SASS, basic JavaScript (through JQuery) and basic Ruby. My personal interest in programming languages has led me into the world of Java, Ruby, Python, and PHP/MySQL, learning the basics of Object Oriented Programming, which has made it possible for me to tinker with frontend code written by other developers. I have also become a site&#45;wide QA expert on various platforms and operating systems. In other words, I am a pixel-perfect, attention to detail kind of gal.
     .follow
-      %a(href="https://twitter.com/#!/anaecarter" class="twitter-follow-button" data-show-count="false" data-lang="en")Follow @anaecarter
+      %a(href="https://twitter.com/#!/@anaenders" class="twitter-follow-button" data-show-count="false" data-lang="en")Follow @anaenders
     %a.dload(href="/ana_enders.pdf" target="_blank")
     .clear
     
