--- a/views/layout.haml
+++ b/views/layout.haml
@@ -19,8 +19,7 @@
     %script(src="/javascripts/slides.min.jquery.js" type="text/javascript")
     / [if lt IE 9]
       %script(src="/javascripts/html5shiv.js" type="text/javascript")
-    %script(type="text/javascript")
-
+    :javascript
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-10030932-1']);
       _gaq.push(['_trackPageview']);
