more slideshow images

--- a/views/about.haml
+++ b/views/about.haml
@@ -44,6 +44,10 @@
           %img(src="/images/about/slide13.jpg" alt="slide13")
         %div
           %img(src="/images/about/slide14.jpg" alt="slide14")
+        %div
+          %img(src="/images/about/slide15.jpg" alt="slide15")
+        %div
+          %img(src="/images/about/slide16.jpg" alt="slide16")
   
   .casual-intro
     %p
