more projects for portfolio

--- a/views/index.haml
+++ b/views/index.haml
@@ -15,6 +15,12 @@
     .web-logo
       %img(src="/images/portfolio/web/web_logo_professional.png" alt="web")/
   
+    .small-thumb#tiffany_opener
+      %img(src="/images/portfolio/web/tiffany.png" alt="Tiffany Ring Finder")/
+      
+    .small-thumb#juicegeneration_opener
+      %img(src="/images/portfolio/web/juicegeneration.png" alt="Juice Generation")/
+
     .small-thumb#scully_opener
       %img(src="/images/portfolio/web/scully.png" alt="scully and scully")/
   
@@ -182,6 +188,29 @@
 
 / START LARGE PROJECT DESCRIPTIONS
 
+#tiffany    
+  .detail-container
+    .inner-container   
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/web/tiffany.jpg" alt="Tiffany")/
+      .project-description
+        %span Tiffany & Co. Ring Finder
+        %p 
+          The Ring Finder app is a private voting application wrapped inside of facebook or as a standalone web page. A user would create a list of rings they like using the iPhone Ring Finder app, and share it with their friends by emailing a unique URL, which link guests to the web or facebook, depending on how one logs on. There, people can vote and comment on their favorite rings. My role included writing the views (HTML/CSS) on a Rails framework for the web UI.
+          
+#juicegeneration    
+  .detail-container
+    .inner-container   
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/web/juicegeneration.jpg" alt="Juice Generation")/
+      .project-description
+        %span Juice Generation
+        %p 
+          Developing the front end of this detox juice-centric e-commerce site by writing the HTML, CSS, basic Ruby and some Javascript(JQuery) for the user interface. 
+          URL:
+          %a(href="http://juicegeneration.com/" target="_blank")
+            http://juicegeneration.com/
+
 #orsella    
   .detail-container
     .inner-container   
@@ -343,7 +372,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/boast.jpg" alt="Boast USA")/
       .project-description
-        %span Yigal Azrouel
+        %span Boast USA
         %p 
           Took an existing Rails e-commerce framework and re-skinned it to make this site. Other than the designers involved in the making of Boast, little backend support was required, which made the development phase for the most part a rare solo project. Developed the frontend by writing HTML, CSS, and some very basic Ruby and JavaScript(JQuery) to produce web compliant Rails views in partnership with
           %a(href="http://intersectnyc.com" target="_blank")
@@ -403,7 +432,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/newlywish.jpg" alt="Newlywish")/
       .project-description
-        %span Grand SF
+        %span Newlywish
         %p 
           "NewlyWish is a wedding gift registry service designed to provide to-be-weds, their friends and family, with the choice, convenience, and personalization they desire." This project involved many developers. My role included writing some of the frontend using HTML, CSS, and some very basic Ruby and JavaScript(JQuery). Developed in partnership with
           %a(href="http://intersectnyc.com" target="_blank")
@@ -469,7 +498,7 @@
           Partnered with 
           %a(href="http://intersectnyc.com" target="_blank")
             Intersect NYC 
-          in developing the front end of this detox juice-centric e-commerce site. My role included writing the HTML, CSS, basic Ruby and some Javascript for the user interface. 
+          in developing the front end of this detox juice-centric e-commerce site. My role included writing the HTML, CSS, basic Ruby and some Javascript(JQuery) for the user interface. 
           URL:
           %a(href="http://www.coolercleanse.com/" target="_blank")
             http://www.coolercleanse.com
