minor copy edits

--- a/views/index.haml
+++ b/views/index.haml
@@ -194,7 +194,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/tiffany.jpg" alt="Tiffany")/
       .project-description
-        %span Tiffany & Co. Ring Finder
+        %span Tiffany &#38; Co. Ring Finder
         %p 
           The Ring Finder app is a private voting application wrapped inside of facebook or as a standalone web page. A user would create a list of rings they like using the iPhone Ring Finder app, and share it with their friends by emailing a unique URL, which link guests to the web or facebook, depending on how one logs on. There, people can vote and comment on their favorite rings. My role included writing the views (HTML/CSS) on a Rails framework for the web UI.
           
@@ -206,7 +206,7 @@
       .project-description
         %span Juice Generation
         %p 
-          Developing the front end of this detox juice-centric e-commerce site by writing the HTML, CSS, basic Ruby and some Javascript(JQuery) for the user interface. 
+          Developed the front end of this detox juice-centric e-commerce site by writing the HTML, CSS, basic Ruby and some Javascript(JQuery) for the user interface. 
           URL:
           %a(href="http://juicegeneration.com/" target="_blank")
             http://juicegeneration.com/
